[project]
name = "joplin-mcp"
version = "0.1.0"
description = "MCP server exposing Joplin notes, notebooks, resources, and OCR text to LLM clients via the Joplin Data API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
]
